# evm-indexer

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs  docker-compose.yml  indexer.service  rustfmt.toml
.github/workflows/: build.yml  docker.yml
migrations/: 20230227003909_create-tables.sql  20230227201309_create_tables.sql  create_tables.sql  create_views.sql  indexes.sql
schema/: block.capnp  contract.capnp  log.capnp  trace.capnp  transaction.capnp  withdrawal.capnp
src/: lib.rs
src/chains/: chains.rs  mod.rs
src/config/: config.rs
src/configs/: config.rs  mod.rs
src/db/: db.rs  keys.rs  mod.rs
src/db/models/: balances.rs  block.rs  block_reward.rs  chain_state.rs  contract.rs  contract_metadata.rs  dex_liquidity_update.rs  dex_pair.rs  dex_trade.rs  erc1155_transfer.rs  erc20_transfer.rs  erc721_transfer.rs  log.rs  method.rs  mod.rs  receipt.rs  token.rs  token_detail.rs  token_details.rs  trace.rs  transaction.rs  withdrawal.rs  withdrawals.rs
src/genesis/: bsc.rs  ethereum.rs  mod.rs  polygon.rs
src/rpc/: mod.rs  rpc.rs
src/utils/: aggregate.rs  dex_factories.rs  events.rs  format.rs  mod.rs  serde.rs  tokens.rs
src/utils/parsers/: erc1155.rs  erc20.rs  erc721.rs  mod.rs  swap_v2.rs  swap_v3.rs
utils/: docker-compose.bsc.yml  docker-compose.ethereum.yml  docker-compose.polygon.yml  docker-compose.yml
utils/bsc/: .env.example
utils/polygon/: docker-compose.polygon.yml
