[package]
name = "evm-indexer"
version = "1.5.1"
license = "MIT"
edition = "2021"
repository = "https://github.com/eabz/evm-indexer"
description = "Scalable SQL indexer for EVM compatible blockchains"

[dependencies]
array-bytes = "9"
clap = { version = "4", features = ["derive"] }
clickhouse = "0.13"
ethers = { version = "2", features = ["rustls"] }
futures = "0.3"
hex = "0.4"
jsonrpsee = { version = "0.24", features = ["macros", "server"] }
jsonrpsee-http-client = "0.24"
jsonrpsee-ws-client = "0.24"
log = "0.4"
primitive-types = "0.12"
rand = "0.8"
serde = "1"
serde_bytes = "0.11"
serde_json = "1"
serde_repr = "0.1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
url = "2"

[dependencies.simple_logger]
version = "5"
default-features = false
features = ["colors"]

[[bin]]
path = "bin/indexer.rs"
name = "indexer"
