[package]
name = "evm-indexer"
version = "2.0.0"
license = "MIT"
edition = "2021"
repository = "https://github.com/eabz/evm-indexer"
description = "Scalable SQL indexer for EVM compatible blockchains"

[dependencies]
alloy = { version = "0.1", features = ["full", "node-bindings", "rpc-types", "json-rpc", "rpc-client"] }
alloy-rpc-types-trace = "0.1"
array-bytes = "9"
clap = { version = "4", features = ["derive"] }
clickhouse = "0.13"
futures = "0.3"
hex = "0.4"
log = "0.4"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
serde_repr = "0.1"
serde_with = "3"
tokio = { version = "1", features = ["full"] }
url = "2"
reqwest = { version = "0.12", features = ["json"] }
simple_logger = { version = "5", default-features = false, features = ["colors"] }

[[bin]]
path = "bin/indexer.rs"
name = "indexer"
